ITI-terraform-tasks/security-group.tf
resource "aws_security_group" "secgroup" {
  name        = "sec-group"
  description = "Allow HTTP traffic from anywhere"
  vpc_id = "vpc-0e2fcd9260bbf03af"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
